--- a/src/main.css
+++ b/src/main.css
@@ -3,5 +3,46 @@
 @tailwind utilities;
 
 .nav-link {
-    @apply mt-3 text-gray-600 hover:underline sm:mx-3 sm:mt-0;
+    @apply mt-3 text-gray-600 hover: underline sm:mx-3 sm:mt-0;
+}
+
+.star {
+    position: relative;
+
+    display: inline-block;
+    width: 0;
+    height: 0;
+
+    margin-left: .6em;
+    margin-right: .6em;
+    margin-bottom: 1.2em;
+
+    border-right: .3em solid transparent;
+    border-bottom: .7em solid #FC0;
+    border-left: .3em solid transparent;
+    /* Controlls the size of the stars. */
+    font-size: 12px;
+}
+
+.star:before,
+.star:after {
+    content: '';
+
+    display: block;
+    width: 0;
+    height: 0;
+
+    position: absolute;
+    top: .6em;
+    left: -1em;
+
+    border-right: 1em solid transparent;
+    border-bottom: .7em solid #FC0;
+    border-left: 1em solid transparent;
+
+    transform: rotate(-35deg);
+}
+
+.star:after {
+    transform: rotate(35deg);
 }
